test/error/error.input142.zc
Array must have non-zero elements:fred on line 1
